перехід на JavaFX